# Rope-Em-Up

./: .gitignore  CMakeLists.txt  How to play.txt  README.md
cmake/: global_settings.cmake
res/Male/: player_M.mtl
res/Modules/: mod1.mtl  mod2.mtl  mod3.mtl  mod4.mtl  mod5.mtl  mod6.mtl  mod7.mtl
res/Players/: MagicAttack.fbx
res/barell/: barell.mtl
res/boxes/: box.mtl  boxes1.mtl  boxes3.mtl
res/config/: EnemyAiInit.ini  PBDManagerInitSettings.ini  RoomGenerationSettingsInit.ini  RoomLayoutGenerationSettingsInit.ini  VehicleInit.ini
res/cubemaps/: laufenurg_church_1k.hdr
res/enemy/: ball_rig.fbx  enemy.fbx  enemy.mtl  enemy_ch.fbx  enemy_changed.fbx  enemy_deaths.fbx  enemy_dt.fbx  enemy_f.fbx  enemy_idles.fbx  enemy_test.fbx
res/grass/: grarss_blade_ao.png~  grass.blend  grass.blend1  grass.mtl  grass2.mtl
res/grass_floor/: floor.mtl  grass_floor.mtl
res/lampa/: lamp.mtl
res/logs/: coll_a_debug.csv  coll_b_debug.csv  get_frame.py  polygon_debug.csv  tempCodeRunnerFile.py
res/ls_upgrade/: ls_upgrade.mtl
res/models/: ball.fbx  ball.mtl  cube_2.mtl  cube_testing.mtl  enemy.mtl  gate.mtl  module1.mtl  player.mtl  simple_floor.mtl  simple_wall.mtl  test.mtl  test2.dae  test2.fbx  test2.mtl
res/pierdoly/: addons.blend  addons.blend1  bone.mtl
res/players/: untitled.fbx
res/shaders/: BRDF.frag  BRDF.vert  Background.frag  Background.vert  BackgroundFragmentShader.frag  BackgroundVertexShader.vert  Basic.frag  BasicDefferedLight.frag  BasicFragmentShader.frag  BasicVertexShader.vert  Billboard.frag  (+56 more)
src/: CMakeLists.txt  main.cc  main.cpp
(+253 files in other folders)
